--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <li><a href="#">VIDEOS</a></li>
               <li><a href="#">EVENTS</a></li>
 
-              <li><a href="tel:555-555-5555">CONTACT</a></li>
+              <li><a href="tel:0011223344">CONTACT</a></li>
               <li><a href="#">PROFILE</a></li>
             </ul>
           </div>
@@ -40,8 +40,8 @@
           <div class="row">
             <div class="col-md-6">
               <h1 class="title">GAMERS DON'T DIE THEY RESPAWN</h1>
-                <a class="button" href="#"><div class="button-text">JOIN CLAN</div></a>
-                <a class="button" href="#"><div class="button-text">JOIN DISCORD</div></a>
+                <a class="button" href="https://link.clashofclans.com/en?action=OpenClanProfile&tag=RQGGLV20"><div class="button-text">CHECK OUT OUR CLAN</div></a>
+                <a class="button" href="https://discord.gg/RT6hv6Z"><div class="button-text">JOIN DISCORD</div></a>
             </div>
             <div class="col-md-6">
               <div class="text-center">
