--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
  
-  <title>BETATRON</title>
+  <title>Betatron Family™</title>
 
 
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
